--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "graphql": "^16.5.0",
+    "i18next": "^21.8.14",
+    "i18next-http-backend": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "urql": "^2.2.3",
