--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.1",
     "react-scripts": "5.0.1",
+    "react-waypoint": "^10.3.0",
     "react-youtube": "^9.0.3",
     "typescript": "^4.7.4",
     "urql": "^2.2.3",
